--- a/members/templates/index.html
+++ b/members/templates/index.html
@@ -6,6 +6,8 @@
 <td>{{ x.id }}</td>
 <td>{{ x.firstname }}</td>
 <td>{{ x.lastname }}</td>
+<td><a href="delete/{{x.id}}">delete</a></td>
+<td><a href="update/{{x.id}}">update</a></td>
 </tr>
 {% endfor %}
 </table>
